--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 
 			<div class="form__form-box-desc form__form-box--txt">
-				<label class='form__label' for="description"> Enter description</label>
+				<label class='form__label form__label--textarea' for="description"> Enter description</label>
 				<textarea class='form__input textarea' type="text" placeholder="Max length 220 characters" name='description' id="description" maxlength="220"></textarea>
 			</div>
 			<div class="form__form-box form__form-box--txt">
